fixing layout issues, causing unwanted scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   box-sizing: border-box;
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
